--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <meta property="twitter:description" content="Useful when you need to create id transaction.">
     <meta property="twitter:image" content="/id-gen.jpg">
 
+    <link rel="apple-touch-icon" href="/icon/apple-touch-icon.png" sizes="180x180">
+    <meta name="theme-color" content="#24ad6d">
   </head>
   <body>
     <div id="app"></div>
