doc: update screenshot preview website

--- a/index.html
+++ b/index.html
@@ -5,25 +5,38 @@
     <link rel="icon" type="image/svg+xml" href="/icons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Id Generator</title>
-    <meta name="title" content="Id Generator">
-    <meta name="description" content="Useful when you need to create id transaction.">
+    <meta name="title" content="Id Generator" />
+    <meta
+      name="description"
+      content="Useful when you need to create id transaction."
+    />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://id-gen-seven.vercel.app/">
-    <meta property="og:title" content="Id Generator">
-    <meta property="og:description" content="Useful when you need to create id transaction.">
-    <meta property="og:image" content="/id-gen.jpg">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://id-gen-seven.vercel.app/" />
+    <meta property="og:title" content="Id Generator" />
+    <meta
+      property="og:description"
+      content="Useful when you need to create id transaction."
+    />
+    <meta property="og:image" content="/id-gen.jpg" />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://id-gen-seven.vercel.app/">
-    <meta property="twitter:title" content="Id Generator">
-    <meta property="twitter:description" content="Useful when you need to create id transaction.">
-    <meta property="twitter:image" content="/id-gen.jpg">
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://id-gen-seven.vercel.app/" />
+    <meta property="twitter:title" content="Id Generator" />
+    <meta
+      property="twitter:description"
+      content="Useful when you need to create id transaction."
+    />
+    <meta property="twitter:image" content="/id-gen.jpg" />
 
-    <link rel="apple-touch-icon" href="/icon/apple-touch-icon.png" sizes="180x180">
-    <meta name="theme-color" content="#24ad6d">
+    <link
+      rel="apple-touch-icon"
+      href="/icons/apple-touch-icon.png"
+      sizes="180x180"
+    />
+    <meta name="theme-color" content="#24ad6d" />
   </head>
   <body>
     <div id="app"></div>
